Fix: Overflow and style changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ h1 {
 #homebutton {
     margin-top: 30px;
     width: 25%;
-    padding: 10px;
+    padding: 12px 10px;
     border-radius: 19px;
     cursor: pointer;
     border: 3px solid black;
@@ -149,12 +149,15 @@ h1 {
 .box {
     border: 2px solid black;
     width: 350px;
-    height: 500px;
+    min-height: 510px;
     margin: 60px 40px;
     position: relative;
     border-radius: 10px;
     background-color: aliceblue;
     z-index: -1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .box p {
@@ -170,10 +173,12 @@ h1 {
 
 
 .box h3 {
-    width: 100%;
+    /* width: 100%; */
+    padding: 5px;
     position: absolute;
     bottom: 0;
     text-align: center;
+    background-color: #fff;
 }
 
 #about {
@@ -211,7 +216,7 @@ h1 {
 }
 
 #locn {
-    color: rgb(118, 255, 118);
+    color: rgb(55, 255, 55);
     padding: 10px;
     margin-bottom: 71px;
     font-weight: bold;
